fix profile spacing on very small screens

--- a/web/source/css/profile.css
+++ b/web/source/css/profile.css
@@ -171,6 +171,7 @@ main {
 		}
 
 		.basic {
+			margin-top: calc(-22vw + 1rem);
 			height: initial;
 			display: flex;
 			flex-direction: column;
